--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -14,7 +14,7 @@
         {% endif %}
         <div class="login_wrapper">
             <input type="text" name="username" placeholder="ID">
-            <input type="password" name="password" placeholder="P/W">
+            <input type="password" name="password" placeholder="Password">
             <div class="button_box">
                 <a class="social_login" href="{% provider_login_url 'kakaotalk' %}">카카오톡으로 로그인</a>
                     <button class="login_button" type="submit">로그인</button>
