--- a/project/app/templates/registration/signup.html
+++ b/project/app/templates/registration/signup.html
@@ -14,7 +14,7 @@
         {% endif %}
         <div class="signup_wrapper">
             <input type="text" name="username" placeholder="ID">
-            <input type="password" name="password" placeholder="P/W">
+            <input type="password" name="password" placeholder="Password">
             <button class="signup_button"type="submit">가입하기</button>
         </div>
         </form>
