의무적인 커밋

--- a/project/app/templates/list_youtuber.html
+++ b/project/app/templates/list_youtuber.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="top">
     <p class="top_text"><strong>ㅇㅇ명의 유튜버</strong>가<br>편집자님을 기다리고 있어요!</p>
-    <a><div class="new_button">모집 공고 내러 가기</div></a>
+    <a href="{% url 'new_youtuber' %}"><div class="new_button">모집 공고 내러 가기</div></a>
 </div>
 <div class="filter_box">
     <select name="tool">
