--- a/project/app/templates/new_youtuber.html
+++ b/project/app/templates/new_youtuber.html
@@ -21,24 +21,24 @@
         <div class="content1">
             <div class="content_text">편집 가능 툴</div>
             <div class="content1_option">
-                <input type="radio" name="content_info" value="프리미어프로">프리미어프로
-                <input type="radio" name="content_info" value="애프터이펙트">애프터이펙트
-                <input type="radio" name="content_info" value="파이널컷">파이널컷
-                <input type="radio" name="content_info" value="베가스">베가스
-                <input type="radio" name="content_info" value="포토샵">포토샵
-                <input type="radio" name="content_info" value="일러스트">일러스트
-                <input type="radio" name="content_info" value="Blender">Blender
-                <input type="radio" name="content_info" value="Maya">Maya
+                <input type="checkbox" name="tool" value="pro">프리미어프로
+                <input type="checkbox" name="tool" value="aftereffect">애프터이펙트
+                <input type="checkbox" name="tool" value="finalcut">파이널컷
+                <input type="checkbox" name="tool" value="vegas">베가스
+                <input type="checkbox" name="tool" value="photoshop">포토샵
+                <input type="checkbox" name="tool" value="illust">일러스트
+                <input type="checkbox" name="tool" value="Blender">Blender
+                <input type="checkbox" name="tool" value="Maya">Maya
             </div>
         </div> 
         <div class="content2">
             <div class="content_text">희망 근무 형태</div>
             <div class="content2_option">
-                <input type="radio" name="content_info" value="영상촬영">영상촬영
-                <input type="radio" name="content_info" value="영상편집">영상편집
-                <input type="radio" name="content_info" value="자막">자막
-                <input type="radio" name="content_info" value="썸네일">썸네일
-                <input type="radio" name="content_info" value="기타">기타 
+                    <input type="checkbox" name="work" value="shoot">영상촬영
+                    <input type="checkbox" name="work" value="edit">영상편집
+                    <input type="checkbox" name="work" value="subtitle">자막
+                    <input type="checkbox" name="work" value="thumbnail">썸네일
+                    <input type="checkbox" name="work" value="etc">기타 
             </div>
         </div>
         <div class="content3">
