form_to_youtuber 수정

--- a/project/app/templates/form_to_editor.html
+++ b/project/app/templates/form_to_editor.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="q2">
-            <div class="q2_text">요구사항을 자유사항으로 *자세히* 입력해주세요</div>
+            <div class="q2_text">요구사항을 자유형식으로 *자세히* 입력해주세요</div>
                 <input type="text" name="content" placeholder="ex) 자막은 현지 문화에 맞게...">
             </div>
         </div>
