--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -24,7 +24,7 @@
                 <a href="{% url 'list_editor' %}">에디터 프로필</a>
             </div>
             <div class="nav-item">
-                {% comment %} <a href="{% url 'login' %}">로그인</a> {% endcomment %}
+                <a href="{% url 'login' %}">로그인</a>
             </div>
         </div> 
     </div>
