--- a/project/app/static/new_editor.css
+++ b/project/app/static/new_editor.css
@@ -47,4 +47,9 @@
     padding-top:14px;
     padding-left:14px;    
 }
-  
+
+.content1{
+    width: 272px;
+    height: 105px;
+    background-color: #ffffff;
+}
