--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -8,7 +8,7 @@
     {% block content %}
     {% if user.is_authenticated %}
     <div class="top">
-        <div>안녕하세요 00님</div>
+        <div>안녕하세요 {{user.username}}님</div>
         <div>편-안에서 안심하고</div>
         <div>편집자를 찾아보세요!</div>
     </div>
