--- a/project/app/static/new_editor.css
+++ b/project/app/static/new_editor.css
@@ -1,55 +1,125 @@
-.top{
-    padding-top: 10px;
-    padding-left: 30px;
-    padding-bottom: 10px;
-    width:100%;
-    box-sizing: border-box;
-  }
-
-.top_information{
-    width: 300px;
-    height: 170px;
-    background-color: #ebebeb;
-    padding-top:14px;
-    padding-left:14px;
-    margin-bottom: 14px;
+.top {
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.top_information_text{
-    font-size:15px;
-    font-weight: 700;
-    color: #6f6f6f;
+.top_information {
+  width: 310px;
+  height: 170px;
+  background-color: rgba(184, 221, 252, 0.5);
+  padding-top: 14px;
+  padding-left: 9px;
+  margin-bottom: 14px;
 }
 
-.profile_img_input{
-    width: 65px;
-    height:20px;
-    background-color: #ffffff;
-    display: flex;
-    align-items: center;
-    margin-top:10px;
+.top_information_text {
+  font-size: 15px;
+  font-weight: 700;
+  color: #6f6f6f;
 }
 
-.profile_detail_input{
-    margin-top: 10px;
+.profile_img_input {
+  width: 65px;
+  height: 20px;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
 }
 
-.profile_detail_input input{
-    width: 200px;
-    height: 30px;
-    margin-bottom: 10px;
+.profile_detail_input {
+  margin-top: 10px;
 }
 
-.content_box{
-    width: 300px;
-    height: 170px;
-    background-color: #ebebeb;
-    padding-top:14px;
-    padding-left:14px;    
+.profile_detail_input input {
+  width: 200px;
+  height: 30px;
+  margin-bottom: 10px;
 }
 
-.content1{
-    width: 272px;
-    height: 105px;
-    background-color: #ffffff;
+.content_box {
+  width: 300px;
+  background-color: rgba(184, 221, 252, 0.5);
+  padding-top: 14px;
+  padding-left: 9px;
+  padding-bottom: 10px;
+  padding-right: 9px;
+}
+
+.content1,
+.content2,
+.content3,
+.content4 {
+  width: 272px;
+  height: 105px;
+  background-color: #ffffff;
+  margin-top: 10px;
+
+  font-size: 12px;
+  padding: 10px;
+}
+
+.content_text {
+  margin-bottom: 9px;
+}
+
+.content1_option {
+  width: 250px;
+}
+
+.content2_option {
+  width: 250px;
+}
+
+.detail_box {
+  width: 295px;
+  background-color: rgba(184, 221, 252, 0.5);
+  padding-top: 14px;
+  padding-left: 14px;
+  margin-top: 14px;
+  margin-bottom: 20px;
+  padding-bottom: 14px;
+  padding-right: 9px;
+}
+
+.content5_option {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 13px;
+}
+
+.detail_box .top_information_text {
+  margin-bottom: 10px;
+}
+
+.detail_box input {
+  height: 30px;
+  margin-top: 9px;
+  padding-left: 5px;
+}
+
+.submit_button {
+  border-radius: 20px;
+  background-color: #bcd6ff;
+  width: 200px;
+  height: 42px;
+  text-align: center;
+  padding: 2px;
+  padding-top: 5px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  text-decoration: none;
+  color: black;
+  box-sizing: border-box;
+  font-weight: 300;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0px;
+  margin-left: 50px;
+  margin-bottom: 30px;
 }
