--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -33,6 +33,8 @@
     <div class ="total"> 
         {% block content %}{% endblock content %}
     </div>
+    <div></div>
+    <br/>
 
 
     <div class = "footer">
@@ -42,7 +44,6 @@
             <span>채용 정보</span><span>도움말</span>
         </div>
         <div class="footer_introduce2">
-            <img src="logo2.png" width="144" height="54" alt="편안 로고"> 
             <div class="customer"> 
                 <div class="phone">
                     <p>
@@ -63,6 +64,6 @@
                 </div>
             </div>
         </div>            
-    </footer>
+    </div>
 </body>
 </html>
