--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -8,9 +8,9 @@
     {% block content %}
     {% if user.is_authenticated %}
     <div class="top">
-        <div>안녕하세요 00님</div>
+        <div>안녕하세요. <strong>00님</strong>, </div>
         <div>편-안에서 안심하고</div>
-        <div>편집자를 찾아보세요!</div>
+        <div><strong>편집자</strong>를 찾아보세요!</div>
     </div>
     <div class="best">
         <div class="title">이번주의 BEST 편집자</div>
@@ -48,7 +48,7 @@
     </div>
     <a class="nav-item" href="{% url 'list_editor' %}">
         <div class="button">
-            더 많은 편집자 보러가기>
+            더 많은 편집자 보러가기 >
         </div>
     </a>
     {% else %}
