--- a/project/app/templates/list_editor.html
+++ b/project/app/templates/list_editor.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="top">
     <p class="top_text"><strong>ㅇㅇ명의 실력있는 편집자</strong>가<br>유튜버님을 기다리고 있어요!</p>
-    <a><div class="new_button">편집자 등록하러 가기</div></a>
+    <a href="{% url 'new_editor' %}"><div class="new_button">편집자 등록하러 가기</div></a>
 </div>
 <div class="filter_box">
     <select name="tool">
@@ -68,54 +68,25 @@
     </select>
 </div>
 <div class="post_box">
-    <div class="post_item">
-        <div class="post_item_top">
-            <div class="post_item_hashtag">#브이로그 #게임</div>
+    {% for editor in post_editor %}
+    <div class="post_item" style="background-image : url('{{editor.img}}'); background-size : cover;">
+         <div class="post_item_top" >
+         <div class="post_item_hashtag">#브이로그 #뷰티</div>
+           
             <button class="like_button"><img src="{% static 'ic-favorite-border-24-px.png' %}"></button>
         </div>
         <div class="post_item_bottom">
             <div class="post_item_title">
-                <p class="post_item_title_text">후회안할 세련된 영상 만들어 드립니다</p>
+                <p class="post_item_title_text">{{ editor.title }}</p>
             </div>
             <div class="line">
             </div>
             <div class="post_item_price">
-                <p class="post_item_price_text">분당 <strong>1</strong> 만원</p>
+                <p class="post_item_price_text">분당 <strong>{{ editor.basic_price }}</strong> 만원</p>
             </div>
         </div>
     </div>
-     <div class="post_item">
-        <div class="post_item_top">
-            <div class="post_item_hashtag">#브이로그 #게임</div>
-            <button class="like_button"><img src="{% static 'ic-favorite-border-24-px.png' %}"></button>
-        </div>
-        <div class="post_item_bottom">
-            <div class="post_item_title">
-                <p class="post_item_title_text">후회안할 세련된 영상 만들어 드립니다</p>
-            </div>
-            <div class="line">
-            </div>
-            <div class="post_item_price">
-                <p class="post_item_price_text">분당 <strong>1</strong> 만원</p>
-            </div>
-        </div>
-    </div>
-     <div class="post_item">
-        <div class="post_item_top">
-            <div class="post_item_hashtag">#브이로그 #게임</div>
-            <button class="like_button"><img src="{% static 'ic-favorite-border-24-px.png' %}"</button>
-        </div>
-        <div class="post_item_bottom">
-            <div class="post_item_title">
-                <p class="post_item_title_text">후회안할 세련된 영상 만들어 드립니다</p>
-            </div>
-            <div class="line">
-            </div>
-            <div class="post_item_price">
-                <p class="post_item_price_text">분당 <strong>1</strong> 만원</p>
-            </div>
-        </div>
-    </div>
+    {% endfor %}
 </div>
 
 <div class="page_num">1 2 3</div>
