--- a/project/app/static/home.css
+++ b/project/app/static/home.css
@@ -1,121 +1,158 @@
 a{
-text-decoration: none;
-}
-.top{
-  padding-top: 22px;
-  padding-left: 30px;
-  padding-bottom: 22px;
-  width:100%;
-  background-color: #f7f7f7;
-  font-weight: 300;
-  box-sizing: border-box;
-
-}
-
-.best{
-  width: 100%;
-  padding: 30px;
-  box-sizing: border-box;
-  padding-bottom: 10px;
-}
-
-.title{
-  font-weight: 700;
-}
-
-.content{
-  background-color: rgba(184, 221, 252, 0.5);
-  margin-top: 14px;
-  padding: 22px;
-  overflow: scroll;
-  display: flex;
-}
-
-.video{
-  margin:10px;
-  width:223px;
-  height: 130px;
-  background-color: white;
-  border-radius:10px;
-  text-align: center;
-}
-
-.videocontent{
-  margin:10px;
-  padding: 10px;
-  height: 30px;
-  background-color: white;
-  border-radius:10px;
-  font-weight: 200;
-  font-size: 12px;
-
-}
-
-.inquiry{
-  width: 100%;
-  padding: 30px;
-  padding-top:15px;
-  box-sizing: border-box;
-}
-
-.editor{
-  color: gray;
-  font-size: 12px;
-  margin:10px;
-  margin-left: 0px;
-  border-bottom:  #a0a0a0 solid 1px;
-  width: 95px;
-  color: #a0a0a0;
-}
-
-.inquiry .content{
-  background-color: rgba(184, 221, 252, 0.5);
-  margin-top: 14px;
-  padding: 0px;
-  display: flex;
-  flex-direction: column;
-}
-
-.q1, .q2, .q3{
-  margin: 15px;
-  background-color: white;
-  font-weight: 300;
-  padding: 10px;
-  font-size: 14px;
-}
-
-.q1_text, .q2_text, .q3_text{
-  margin-bottom: 20px;
-}
-
-.q1_option, .q2_option, .q3_option{
-  width: 190px;
-}
-
-.q3_option{
-  width: 190px;
-}
-
-input{
-  margin-bottom:13px;
-  margin-right: 5px;
-}
-
-.button{
-  border-radius: 20px;
-  background-color: #bcd6ff;
-  width: 315px;
-  height:42px;
-  text-align: center;
-  padding: 2px;
-  padding-top:7px;
-  box-sizing: border-box;
-  margin-top:20px;
   text-decoration: none;
-  color: black;
-  box-sizing: border-box;
-  font-weight: 300;
-}
-
-
-
+  }
+  .top{
+    padding-top: 22px;
+    padding-left: 30px;
+    padding-bottom: 22px;
+    width:100%;
+    background-color: #f7f7f7;
+    font-weight: 300;
+    box-sizing: border-box;
+  
+  }
+  
+  .best{
+    width: 100%;
+    padding: 30px;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+  }
+  
+  .title{
+    font-weight: 700;
+  }
+  
+  .content{
+    background-color: rgba(184, 221, 252, 0.5);
+    margin-top: 14px;
+    padding: 22px;
+    overflow: scroll;
+    display: flex;
+  }
+  
+  .video{
+    margin:10px;
+    width:223px;
+    height: 130px;
+    background-color: white;
+    border-radius:10px;
+    text-align: center;
+  }
+  
+  .videocontent{
+    margin:10px;
+    padding: 10px;
+    height: 30px;
+    background-color: white;
+    border-radius:10px;
+    font-weight: 200;
+    font-size: 12px;
+  
+  }
+  
+  .inquiry{
+    width: 100%;
+    padding: 30px;
+    padding-top:15px;
+    box-sizing: border-box;
+  }
+  
+  .editor{
+    color: gray;
+    font-size: 12px;
+    margin:10px;
+    margin-left: 0px;
+    border-bottom:  #a0a0a0 solid 1px;
+    width: 95px;
+    color: #a0a0a0;
+  }
+  
+  .inquiry .content{
+    background-color: rgba(184, 221, 252, 0.5);
+    margin-top: 14px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .q1, .q2, .q3{
+    margin: 15px;
+    background-color: white;
+    font-weight: 300;
+    padding: 10px;
+    font-size: 14px;
+  }
+  
+  .q1_text, .q2_text, .q3_text{
+    margin-bottom: 20px;
+  }
+  
+  .q1_option, .q2_option, .q3_option{
+    width: 190px;
+  }
+  
+  .q3_option{
+    width: 190px;
+  }
+  
+  input{
+    margin-bottom:13px;
+    margin-right: 5px;
+  }
+  
+  .button{
+    border-radius: 20px;
+    background-color: #bcd6ff;
+    width: 315px;
+    height:42px;
+    text-align: center;
+    padding: 2px;
+    padding-top:5px;
+    box-sizing: border-box;
+    margin-top:20px;
+    text-decoration: none;
+    color: black;
+    box-sizing: border-box;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right:0px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+  .button2{
+    border-radius: 20px;
+    background-color: #bcd6ff;
+    width: 315px;
+    height:42px;
+    text-align: center;
+    padding: 2px;
+    padding-top:5px;
+    box-sizing: border-box;
+    margin-top:20px;
+    text-decoration: none;
+    color: black;
+    box-sizing: border-box;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right:0px;
+    margin-bottom: 30px;
+  }
+  
+  .explore{
+    width: 100%;
+    padding: 30px;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+  }
+  
+  .review{
+    width: 100%;
+    padding: 30px;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+  }
