--- a/project/app/templates/detail_editor.html
+++ b/project/app/templates/detail_editor.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'detail_editor.css' %}" type='text/css'>
+{% endblock head %}
 {% block content %}
 
 <div class="top">
