--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -5,119 +5,113 @@
 <link rel="stylesheet" href="{% static 'home.css' %}" type='text/css'>
 {% endblock head %}
 
-    {% block content %}
-    {% if user.is_authenticated %}
-    <div class="top">
-        <div>안녕하세요 {{user.username}}님</div>
-        <div>편-안에서 안심하고</div>
-        <div>편집자를 찾아보세요!</div>
-    </div>
-    <div class="best">
-        <div class="title">이번주의 BEST 편집자</div>
-        <div class="content">
-            <div class="videos">
-                <div class="video">비디오</div>
-                <div class="videocontent">내용</div>
-            </div>
-            <div class="videos">
-                <div class="video">비디오</div>
-                <div class="videocontent">내용</div>
-            </div>
-            <div class="videos">
-                <div class="video">비디오</div>
-                <div class="videocontent">내용</div>
-            </div>
+{% block content %}
+{% if user.is_authenticated %}
+<div class="top">
+    <div>안녕하세요 <strong>{{user.username}}</strong>님</div>
+    <div>편-안에서 안심하고</div>
+    <div><strong>편집자</strong>를 찾아보세요!</div>
+</div>
+<div class="best">
+    <div class="title">이번주의 BEST 편집자</div>
+    <div class="content">
+        <div class="videos">
+            <div class="video">비디오</div>
+            <div class="videocontent">내용</div>
+        </div>
+        <div class="videos">
+            <div class="video">비디오</div>
+            <div class="videocontent">내용</div>
+        </div>
+        <div class="videos">
+            <div class="video">비디오</div>
+            <div class="videocontent">내용</div>
         </div>
     </div>
-    <div class="explore">
-        <div class="title">마음껏 둘러보기</div>
-        <div class="content">
-            <div class="explore_video">비디오</div>
-            <div class="explore_video">비디오</div>
-            <div class="explore_video">비디오</div>
+</div>
+<div class="review">
+    <div class="title">실시간 리뷰</div>
+    <div class="content">
+        <div class="review_text">리뷰</div>
+        <div class="review_text">리뷰</div>
+        <div class="review_text">리뷰</div>
+        <div class="review_text">리뷰</div>
+    </div>
+</div>
+<a class="nav-item" href="{% url 'list_editor' %}">
+    <div class="button">
+        더 많은 편집자 보러가기>
+    </div>
+</a>
+</a>
+{% else %}
+<div class="top">
+    <div>오늘도,</div>
+    <div><strong>124명의 유튜버</strong>와 <strong>178명의 편집자가</strong></div>
+    <div>편-안에서 만나고 있습니다.</div>
+</div>
+<div class="best">
+    <div class="title">이번주의 BEST 편집자</div>
+    <div class="content">
+        <div class="videos">
+            <div class="video">비디오</div>
+            <div class="videocontent">내용</div>
+        </div>
+        <div class="videos">
+            <div class="video">비디오</div>
+            <div class="videocontent">내용</div>
+        </div>
+        <div class="videos">
+            <div class="video">비디오</div>
+            <div class="videocontent">내용</div>
         </div>
     </div>
-    <div class="review">
-        <div class="title">실시간 리뷰</div>
-        <div class="content">
-            <div class="review_text">리뷰</div>
-            <div class="review_text">리뷰</div>
-            <div class="review_text">리뷰</div>
-            <div class="review_text">리뷰</div>
+</div>
+<div class="inquiry">
+    <div class="title">
+        <div>1분만에 설문조사하고,</div>
+        <div>나에게 딱 맞는 편집자 찾기</div>
+    </div>
+    <div class="editor">*저는 편집자에요!</div>
+    <div class="content">
+        <div class="q1">
+            <div class="q1_text">1. 원하시는 <strong>영상 종류</strong>가 있으신가요?</div>
+            <div class="q1_option">
+                <input type="checkbox" name="genre" value="all">전체
+                <input type="checkbox" name="genre" value="vlog">브이로그
+                <input type="checkbox" name="genre" value="beauty">뷰티
+                <input type="checkbox" name="genre" value="game">게임
+                <input type="checkbox" name="genre" value="streaming">스트리밍
+                <input type="checkbox" name="genre" value="music">음악
+                <input type="checkbox" name="genre" value="cook">요리
+            </div>
+        </div>
+        <div class="q2">
+            <div class="q2_text">2. 편집자의 <strong>장기 고용</strong>을 원하시나요?</div>
+            <div class="q2_option">
+                <input type="radio" name="period" value="long">예
+                <input type="radio" name="period" value="short">아니오
+            </div>
+        </div>
+        <div class="q3">
+            <div class="q3_text">3. 원하시는 <strong>근무형태</strong>가 있으신가요?</div>
+            <div class="q3_option">
+                <input type="checkbox" name="work" value="all">전체
+                <input type="checkbox" name="work" value="shoot">영상촬영
+                <input type="checkbox" name="work" value="subtitle">자막
+                <input type="checkbox" name="work" value="edit">영상편집
+                <input type="checkbox" name="work" value="thumbnail">썸네일
+            </div>
         </div>
     </div>
     <a class="nav-item" href="{% url 'list_editor' %}">
-        <div class="button">
-            더 많은 편집자 보러가기>
+        <div class="button2">
+            나에게 맞는 편집자 보러가기 >
         </div>
     </a>
-    {% else %}
-    <div class="top">
-        <div>오늘도,</div>
-        <div><strong>{{post_youtuber.count}}명의 유튜버</strong>와 <strong>{{post_editor.count}}명의 편집자가</strong></div>
-        <div>편-안에서 만나고 있습니다.</div>
-    </div>
-    <div class="best">
-        <div class="title">이번주의 BEST 편집자</div>
-        <div class="content">
-            <div class="videos">
-                <div class="video">비디오</div>
-                <div class="videocontent">내용</div>
-            </div>
-            <div class="videos">
-                <div class="video">비디오</div>
-                <div class="videocontent">내용</div>
-            </div>
-            <div class="videos">
-                <div class="video">비디오</div>
-                <div class="videocontent">내용</div>
-            </div>
-        </div>
-    </div>
-    <div class="inquiry">
-        <div class="title">
-            <div>1분만에 설문조사하고,</div>
-            <div>나에게 딱 맞는 편집자 찾기</div>
-        </div>
-        <div class="editor">*저는 편집자에요!</div>
-        <div class="content">
-            <div class="q1">
-                <div class="q1_text">1. 원하시는 <strong>영상 종류</strong>가 있으신가요?</div>
-                <div class="q1_option">
-                    <input type="checkbox" name="genre" value="all">전체
-                    <input type="checkbox" name="genre" value="vlog">브이로그
-                    <input type="checkbox" name="genre" value="beauty">뷰티
-                    <input type="checkbox" name="genre" value="game">게임
-                    <input type="checkbox" name="genre" value="streaming">스트리밍
-                    <input type="checkbox" name="genre" value="music">음악
-                    <input type="checkbox" name="genre" value="cook">요리
-                </div>
-            </div>
-            <div class="q2">
-                <div class="q2_text">2. 편집자의 <strong>장기 고용</strong>을 원하시나요?</div>
-                <div class="q2_option">
-                    <input type="radio" name="period" value="long">예
-                    <input type="radio" name="period" value="short">아니오
-                </div>
-            </div>
-            <div class="q3">
-                <div class="q3_text">3. 원하시는 <strong>근무형태</strong>가 있으신가요?</div>
-                <div class="q3_option">
-                    <input type="checkbox" name="work" value="all">전체
-                    <input type="checkbox" name="work" value="shoot">영상촬영
-                    <input type="checkbox" name="work" value="subtitle">자막
-                    <input type="checkbox" name="work" value="edit">영상편집
-                    <input type="checkbox" name="work" value="thumbnail">썸네일
-                </div>
-            </div>
-        </div>
-        <a class="nav-item" href="{% url 'list_editor' %}">
-            <div class="button">
-                00명의 편집자 보러가기 >
-            </div>
-        </a>
-    </div>
-    {% endif %}
-    {% endblock content %}
+</div>
+{% endif %}
+{% endblock content %}
 </body>
+
 </html>
