--- a/project/app/templates/new_youtuber.html
+++ b/project/app/templates/new_youtuber.html
@@ -10,17 +10,32 @@
 </head>
 <body>
     {% block content %}
+     <form method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
     <div class="top">
-        <h3>유튜버 등록하기</h3>
+        <h3>편집자 등록하기</h3>
         <div class="top_information">
-            <div class="top_information_text">개인정보</div>
-            <a><div class="top_information_img">프로필 등록하러 가기</div></a>
-        </div>
-    </div>
+            <span class="top_information_text">기본정보</span>
+                <div class="profile_wrapper">
+                    <div class="profile_img_input">
+                        <input class="profile_img_file" type="file" name="img">
+                    </div>
+                    <div class="profile_detail_input">
+                        <input type="text" name="author" placeholder="이름">
+                        <input type="text" name="title" placeholder="한줄 제목">
+
+                    </div>
+                </div>
+            </div>
     <div class="content_box">필수정보
         <div class="content1">
-            <div class="content_text">편집 가능 툴</div>
-            <div class="content1_option">
+            <div class="content_text"></div>
+            <div class="content0">
+                        <input type="checkbox" name="career" value="career">경력무관
+                        <input type="checkbox" name="career" value="career">1년이상 5년미만
+                        <input type="checkbox" name="career" value="career">5년이상
+                    </div>
+            <div class="content1_option">선호하는 툴
                 <input type="checkbox" name="tool" value="pro">프리미어프로
                 <input type="checkbox" name="tool" value="aftereffect">애프터이펙트
                 <input type="checkbox" name="tool" value="finalcut">파이널컷
@@ -31,66 +46,44 @@
                 <input type="checkbox" name="tool" value="Maya">Maya
             </div>
         </div> 
-        <div class="content2">
-            <div class="content_text">희망 근무 형태</div>
-            <div class="content2_option">
-                    <input type="checkbox" name="work" value="shoot">영상촬영
-                    <input type="checkbox" name="work" value="edit">영상편집
-                    <input type="checkbox" name="work" value="subtitle">자막
-                    <input type="checkbox" name="work" value="thumbnail">썸네일
-                    <input type="checkbox" name="work" value="etc">기타 
-            </div>
-        </div>
-        <div class="content3">
-            <div class="content_text">희망 급여
-                <br><p>유튜버가 선택할 수 있는 BASIC, STANDARD, PREMIUM 가격을 설정해주세요</p>
-            </div>
-            <div class="content3_option">
-                <div class="BASIC">BASIC
-                    <div class="BASIC_Content">
-                        <span class="BC">내용</span>
-                        <input type="text" value="내용을 입력하세요. ex) 간단한 자막 편집, 영상 촬영만">
-                    </div>
-                    <div class="BASIC_Price">
-                        <span class="BP">가격</span>
-                        <input type="text" value="가격을 입력하세요. ex) 분당 1만원">
-                    </div>
-                <div class="STANDARD">STANDARD
-                    <div class="STANDARD_Content">
-                        <span class="SC">내용</span>
-                        <input type="text" value="내용을 입력하세요. ex) 포토샵, 썸네일 및 정교한 편집 작업">
-                    </div>
-                    <div class="STANDARD_Price">
-                        <span class="SP">가격</span>
-                        <input type="text" value="가격을 입력하세요. ex) 분당 2만원">
+         <div class="content2">
+                    <div class="content_text">희망 근무 형태</div>
+                    <div class="content2_option">
+                        <input type="checkbox" name="work" value="shoot">영상촬영
+                        <input type="checkbox" name="work" value="edit">영상편집
+                        <input type="checkbox" name="work" value="subtitle">자막
+                        <input type="checkbox" name="work" value="thumbnail">썸네일
+                        <input type="checkbox" name="work" value="etc">기타 
                     </div>
                 </div>
-                <div class="PREMIUM">PREMIUM
-                    <div class="PREMIUM_Content">
-                        <span class="PC">내용</span>
-                        <input type="text" value="내용을 입력하세요. ex) 에펙을 이용한 고도화된 편집 작업">
-                    </div>
-                    <div class="PREMIUM_Price">
-                        <span class="PP">가격</span>
-                        <input type="text" value="가격을 입력하세요. ex) 분당 3만원">
-                    </div>
+        <div class="content3">
+            <div class="content_text">희망 고용 형태</div>
+            <div class="content3_option">
+                    <input type="checkbox" name="period" value="long">장기
+                    <input type="checkbox" name="period" value="short">단기
+            </div>
+        </div>
         <div class="content4">
+            <div class="content_text">
+                    <input type="text" placeholder="지급하는 급여의 형식과 금액을 입력하세요" value="ex) 월급 3,000,000원">
+            </div>
+        <div class="content5">
             <div class="content_box">상세 정보
                 <br><p>자신을 표현할 수 있는 내용을 기입해주세요</p>
             </div>
             <div class="content4_option">
-                <input type="text" name="content_info" value="">
-                <input type="file" name="cotent_info" value="">
-                <input type="url" name="content_info">유튜브 링크 첨부하기
+                <input type="url" name="vid_url">유튜브 링크 첨부하기
             </div>
         </div>
-        <div class="contnet5">
-            <div class="content_box">유튜버가 유의해야할 점</div>
+        <div class="contnet6">
+            <div class="content_box">유의해야할 점</div>
             <div class="content5_option">
-                <input type="text" name="contnet_info" value="수정 사항은 3회까지 가능합니다, 분당/건당 둘 다 가능합니다">
+                <input type="text" name="content" placeholder="ex) 수정 사항은 3회까지 가능합니다, 분당/건당 둘 다 가능합니다">
             </div>
         </div>
     </div>
+    <div class="submit button"><input type="submit" </div>
+    </form>
     {% endblock content %}
 </body>
 </html>
