--- a/project/app/templates/registration/signup.html
+++ b/project/app/templates/registration/signup.html
@@ -2,13 +2,15 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'signup.css' %}" type='text/css'>
+<link rel="stylesheet" href="{% static 'registration/signup.css' %}" type='text/css'>
 {% endblock head %}
 
     {% block content %}
-        <form class="signup_box" method="POST">
+   <div class="signup_box_wrapper">
+    <div class="signup_box2">
+        <form class="signup_box1" method="POST">
         {% csrf_token %}
-        <h1 class="signup_title">회원가임</h1>
+        <h1 class="signup_title">회원가입</h1>
             {% if error %}
         <p class="error_message"style="color : red;">{{ error }}</p>
         {% endif %}
@@ -18,6 +20,8 @@
             <button class="signup_button"type="submit">가입하기</button>
         </div>
         </form>
+    </div>
+   </div> 
     {% endblock content %}
 </body>
 </html>
